--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,42 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="cardBackground">#2C013C</color>
+
+
+    <color name="df_red">#dc3545</color>
+    <color name="df_danger">#dc3545</color>
+    <color name="formBg">#f0f0f0</color>
+    <color name="black_alpha_75">#bf000000</color>
+    <color name="white">#ffffffff</color>
+    <color name="colorWhite">#FFFFFF</color>
+    <color name="colorGrey0">#F1F1F1</color>
+    <color name="colorGrey">#CECECE</color>
+    <color name="colorGrey1">#888888</color>
+    <color name="colorGrey2">#5A5A5A</color>
+    <color name="colorBalck">#131313</color>
+    <color name="colorRad">#d71c32</color>
+    <color name="primary_txt">#212121</color>
+    <color name="orange">#ff563f</color>
+    <color name="fb_blue">#475993</color>
+    <color name="edit_text_hint">#999999</color>
+    <color name="edit_text_txt">#999999</color>
+    <color name="edit_text_bg">#f5f5f5</color>
+    <color name="divider">#f5f5f5</color>
+    <color name="divider_or">#999999</color>
+    <color name="account">#999999</color>
+
+    //views
+    <color name="textView_title_latestListView_adapter">#606060</color>
+    <color name="textView_subTitle_latestListView_adapter">#8A8A8A</color>
+    <color name="textView_viewDetail_latestListView_adapter">#8775D9</color>
+    <color name="textView_rate_latestListView_adapter">#FFFFFF</color>
+    <color name="textView_view_LatestListView_adapter">#8775D9</color>
+    <color name="view_latestListView_adapter">#CDCDCD</color>
+
+    //ratings
+
+    <color name="ratingBarNormal">#60A7BB</color>
+    <color name="ratingSelect">#FEB500</color>
+    <color name="rating">#1d8612</color>
 </resources>
