--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
 
 
     <color name="df_red">#dc3545</color>
-    <color name="df_danger">#dc3545</color>
+    <color name="df_danger">#03A9F4</color>
     <color name="formBg">#f0f0f0</color>
     <color name="black_alpha_75">#bf000000</color>
     <color name="white">#ffffffff</color>
