--- a/app/src/main/res/layout/app_bar_home.xml
+++ b/app/src/main/res/layout/app_bar_home.xml
@@ -32,13 +32,12 @@
                     <TextView
                         android:id="@+id/txt_actiontitle"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:layout_gravity="center"
                         android:layout_weight="1"
                         android:gravity="center|left"
-                        android:padding="5dp"
+                        android:padding="0dp"
                         android:text="@string/app_name"
-                        android:maxLength="12"
                         android:textStyle="bold"
                         android:textColor="@color/colorWhite"
                         android:textSize="18dp"
@@ -101,23 +100,4 @@
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="38dp"
-        android:paddingBottom="10dp"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
-        <LinearLayout
-            android:id="@+id/lvl_hidecart"
-            android:layout_width="match_parent"
-            android:layout_height="75dp"
-            android:layout_weight="1"
-            android:orientation="horizontal"
-            android:gravity="center|left">
-        </LinearLayout>
-
-
-
-    </RelativeLayout>
 </RelativeLayout>
