Added Chat in Forum

--- a/app/src/main/res/layout/app_bar_home.xml
+++ b/app/src/main/res/layout/app_bar_home.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:id="@+id/layoutid"
     android:layout_height="match_parent"
     android:background="@color/colorWhite"
     tools:context=".HomeActivity">
@@ -29,6 +30,10 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:id="@+id/profile_image_message_activity"/>
                     <TextView
                         android:id="@+id/txt_actiontitle"
                         android:layout_width="match_parent"
