--- a/app/src/main/res/drawable/gradient_message_back.xml
+++ b/app/src/main/res/drawable/gradient_message_back.xml
@@ -2,10 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape>
-            <gradient
-                android:startColor= "#a1c4fd"
-            android:endColor="#c2e9fb"
-            android:angle="45"/>
+            <gradient android:angle="45" android:endColor="#c2e9fb" android:startColor="#4771B5" />
         </shape>
     </item>
 </selector>
