--- a/app/src/main/res/layout/forum_fragment.xml
+++ b/app/src/main/res/layout/forum_fragment.xml
@@ -1,67 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/gradient_message_back"
+    android:background="#56BCEC"
     android:orientation="vertical">
-    <com.google.android.material.appbar.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar_message_activity"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-            android:background="@color/colorPrimaryDark">
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:layout_above="@+id/sendforum">
+    <include layout="@layout/chat_item_left" />
 
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:src="@drawable/ic_forum"
-                android:id="@+id/profile_image_message_activity"/>
+    <include layout="@layout/chat_item_right" />
 
-            <TextView
-                android:id="@+id/username_message_activity"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="25dp"
-                android:text="Public Forum"
-                android:textColor="#ffffff"
-                android:textStyle="bold"/>
-        </androidx.appcompat.widget.Toolbar>
-    </com.google.android.material.appbar.AppBarLayout>
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/message_recycler_view"
-        android:layout_weight="1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+    <include layout="@layout/chat_item_left" />
+
+    <include layout="@layout/chat_item_right" />
+
+    <include layout="@layout/chat_item_left" />
+
+    <include layout="@layout/chat_item_right" />
+
+    <include layout="@layout/chat_item_left" />
+
+    <include layout="@layout/chat_item_right" />
+</LinearLayout>
+
+
     <RelativeLayout
+        android:id="@+id/sendforum"
         android:layout_width="match_parent"
-        android:padding="5dp"
-        android:background="#FBFBFD"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_height="wrap_content">
+        android:background="#FBFBFD"
+        android:padding="5dp">
+
         <EditText
-            android:layout_marginLeft="5dp"
             android:id="@+id/text_send_message"
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="5dp"
             android:layout_toLeftOf="@+id/btn_message_send"
             android:background="@android:color/white"
-            android:layout_centerVertical="true"
-            android:hint="Type a message..."
-            android:layout_height="wrap_content"/>
+            android:hint="Type a message..." />
+
         <ImageButton
-            android:layout_marginRight="5dp"
-            android:background="@drawable/message_button_send_round"
-            android:src="@drawable/ic_baseline_send_24"
             android:id="@+id/btn_message_send"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"/>
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="5dp"
+            android:background="@drawable/message_button_send_round"
+            android:src="@drawable/ic_baseline_send_24" />
     </RelativeLayout>
-</LinearLayout>
+</RelativeLayout>
