--- a/app/src/main/res/layout/app_bar_home.xml
+++ b/app/src/main/res/layout/app_bar_home.xml
@@ -33,6 +33,7 @@
                     <de.hdodenhof.circleimageview.CircleImageView
                         android:layout_width="30dp"
                         android:layout_height="30dp"
+                        android:layout_marginEnd="4dp"
                         android:id="@+id/profile_image_message_activity"/>
                     <TextView
                         android:id="@+id/txt_actiontitle"
@@ -44,6 +45,7 @@
                         android:padding="0dp"
                         android:text="@string/app_name"
                         android:textStyle="bold"
+                        android:layout_marginStart="1dp"
                         android:textColor="@color/colorWhite"
                         android:textSize="18dp"
                         />
